working directory changed

--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -11,6 +11,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./JAMes  # set the working directory for all steps
     strategy:
       max-parallel: 4
       matrix:
